{
  "appVersion": "Verzia aplikácie {{version}}",
  "button.loading": "Načítava sa",
  "camera.ocr.error.title": "Kamera nie je dostupná na tomto zariadení",
  "common.continue": "Pokračovať",
  "home.empty.text": "Požiadajte o práva nadriadeného.",
  "home.empty.title": "Nemáte žiadne práva",
  "home.profile": "Profil",
  "home.title": "Enforcement",
  "map.compass": "Kompas",
  "modal.close": "Zavrieť modal",
  "myOffences.empty.text": "Vaše budúce hlásenia sa zobrazia tu.",
  "myOffences.empty.title": "Nemáte žiadne hlásenia",
  "myOffences.title": "Moje hlásenia",
  "offence.duplicity.button": "Vytvoriť hlásenie",
  "offence.duplicity.close": "Zavrieť",
  "offence.duplicity.text": "Vytvorené hlásenie na vozidlo už existuje.",
  "offence.duplicity.title": "Duplicita",
  "offence.location": "Poloha",
  "offence.location.error.title": "Niekde nastala chyba, vráťte sa na začiatok",
  "offence.location.title": "Vyberte miesto",
  "offence.objectiveResponsibility": "Objektívna zodpovednosť",
  "offence.offenceResolution": "Vyriešenie priestupku",
  "offence.offenceResolutionPlaceholder": "Vyberte druh vyriešenia",
  "offence.offenceType": "Druh priestupku",
  "offence.offenceTypePlaceholder": "Vyberte druh priestupku",
  "offence.outOfZone": "Ste mimo zóny, vyberte zónu",
  "offence.picture.detail.add": "Pridať fotku",
  "offence.picture.detail.retake": "Opakovať",
  "offence.picture.detail.title": "Detail fotky",
  "offence.pictures.createOffence": "Vytvoriť hlásenie",
  "offence.pictures.title": "Prehľad fotiek",
  "offence.required": "Toto pole je povinné",
  "offence.resolution.blockingDevice": "Blokovacie zariadenie",
  "offence.resolution.fine": "Pokuta",
  "offence.resolution.forwardedToDi": "Odkaz na DI",
  "offence.resolution.justRegistration": "Iba registrácia",
  "offence.resolution.notCaught": "Vyriešené dohovorom",
  "offence.resolution.notification": "Oznámenie",
  "offence.resolution.unjustifiedReport": "Neoprávnené oznámenie",
  "offence.title": "Hlásenie priestupku",
  "offence.vehicle": "Vozidlo",
  "offenceCamera.addPicture": "Odfotiť",
  "offenceCamera.addPictureTitle": "Pridajte fotku",
  "offenceCamera.error": "Pri fotení sa vyskytla chyba",
  "offenceCamera.titleWithCount": "Ďalšie fotky ({{currentCount}}/{{maxCount}})",
  "offenceResult.description": "Hlásenie bolo úspešne vytvorené, môžete pokračovať ďalej.",
  "offenceResult.home": "Domov",
  "offenceResult.newScan": "Vytvoriť nový sken",
  "offenceResult.newZone": "Vybrať nový úsek",
  "offenceResult.resultError": "Nepodarilo sa vytvoriť hlásenie. Skúste ho vytvoriť znova.",
  "offenceResult.title": "Hlásenie vytvorené",
  "permissions.button": "Otvoriť nastavenia",
  "permissions.camera.cameraDenied.text": "Povoľte prístup v nastaveniach",
  "permissions.camera.cameraDenied.title": "Kamera je zamietnutá",
  "permissions.camera.screen.text": "Povoľte prístup ku kamere, aby ste mohli fotiť.",
  "permissions.camera.screen.title": "Prístup ku kamere",
  "permissions.location.locationDenied.text": "Povoľte prístup v nastaveniach",
  "permissions.location.locationDenied.title": "Poloha je zamietnutá",
  "permissions.location.locationOff.text": "Povoľte používanie polohy",
  "permissions.location.locationOff.title": "Poloha je vypnutá",
  "permissions.location.screen.text": "Povoľte lokalizačné služby, aby ste vedeli určiť polohu vozidla.",
  "permissions.location.screen.title": "Lokalizačné služby",
  "profile.logout": "Odhlásiť sa",
  "profile.myOffences": "Moje hlásenia",
  "profile.title": "Profil",
  "roles.paas.description": "Lorem ipsum dolor sit amet,consectetur adipiscing elit.",
  "roles.paas.title": "Kontrola PAAS parkovania",
  "roles.police.description": "Lorem ipsum dolor sit amet,consectetur adipiscing elit.",
  "roles.police.title": "Priestupky na objektívnu a subjektívnu zodpovednosť.",
  "roles.research.description": "Lorem ipsum dolor sit amet,consectetur adipiscing elit.",
  "roles.research.title": "Testovacie rozhranie. / Prieskum.",
  "scanLicencePlate.licencePlate": "Evidenčné číslo vozidla",
  "scanLicencePlate.next": "Ďalej",
  "scanLicencePlate.retryScan": "Opakovať sken",
  "scanLicencePlate.title": "Skenujte EČV",
  "scanLicencePlate.infoButton.accessibility": "Informácie o skenovaní",
  "scanLicencePlate.info.title": "Lístky a karty",
  "scanLicencePlate.info.tickets.title": "Lístky",
  "scanLicencePlate.info.permits.title": "Karty",
  "scanLicencePlate.info.empty.action": "Obnoviť",
  "scanLicencePlate.info.empty.title": "Žiadne karty ani lístky",
  "scanLicencePlate.info.empty.text": "Na vozidlo nie sú vedené žiadne karty ani lístky",
  "scanLicencePlate.info.state.VALID": "Platné",
  "scanLicencePlate.info.state.INVALID": "Neplatné",
  "scanLicencePlate.info.state.VERIFIED": "Overené",
  "scanLicencePlate.info.state.EXPIRED": "Vypršané",
  "scanLicencePlate.info.state.CANCELED": "Zrušené",
  "signIn.loginButton": "Prihlásiť sa",
  "signIn.title": "Prihlásenie",
  "snackbar.hide": "Skryť",
  "storeVersionControl.primaryActionLabel": "Aktualizovať",
  "storeVersionControl.secondaryActionLabel": "Zavrieť",
  "storeVersionControl.text": "Aktualizujte aplikáciu na najnovšiu verziu.",
  "storeVersionControl.title": "Nová verzia aplikácie",
  "vehicleDetail.title": "Detail vozidla",
  "zone.changeModal.button": "Zmeniť úsek",
  "zone.changeModal.close": "Zavrieť",
  "zone.changeModal.text": "Nie ste v zvolenom úseku. Chcete zmeniť úsek?",
  "zone.changeModal.title": "Mimo pôvodneho úseku",
  "zone.confirm": "Potvrdiť",
  "zone.confirmTitle": "Potvrďte, že fotka je v poriadku.",
  "zone.notSelected": "Nie je zvolená zóna",
  "zone.photo.new": "Nová fotka",
  "zone.photo.title": "Vyberte zónovú značku",
  "zone.tag": "Popis: {{tag}}",
  "zone.tag.placeholder": "Vložte popis",
  "zone.takePicture": "Odfotiť",
  "zone.takePictureTitle": "Pridajte fotku",
  "zone.title": "Vyberte úsek",
  "zone.zonePicture": "Fotka úseku",
  "zone.zoomIn": "Priblížte"
}
