...
import { useOffenceStoreContext } from '@/state/OffenceStore/useOffenceStoreContext'
import { useSetOffenceState } from '@/state/OffenceStore/useSetOffenceState'

type Props = {
  isLoading: boolean
  hasPhoto: boolean
  takePicture: (tag: string) => Promise<void>
}

const ZoneCameraBottomSheet = ({ hasPhoto, isLoading, takePicture }: Props) => {
  const { setOffenceState } = useSetOffenceState()
  const { t } = useTranslation()
  const router = useRouter()
...
              <Typography variant="h2">{t('zone.confirmTitle')}</Typography>

              {zonePhotoTag ? (
                <Typography>{t('zone.tag', { tag: zonePhotoTag })}</Typography>
              ) : null}

              <Button testID="confirmPicture" loading={isLoading} onPress={selectPicture}>
                {t('zone.confirm')}
              </Button>
            </>
          ) : (
            <>
              <Typography variant="h2">{t('zone.takePictureTitle')}</Typography>
...
