...

  const { onCreateOffence, isLoading } = useCreateOffence()

  return (
    <ScreenView
      actionButton={
        <ContinueButton testID="createOffence" loading={isLoading} onPress={onCreateOffence}>
          {t('offence.pictures.createOffence')}
        </ContinueButton>
      }
      title={t('offence.pictures.title')}
      className="flex-1 justify-start"
      options={{
...
