appId: com.bratislava.enforcement
---
- launchApp
- waitForAnimationToEnd
# Set location to Dunajska street
- setLocation:
    latitude: 48.150636
    longitude: 17.111754
- assertVisible:
    id: paas
- tapOn:
    id: paas
- assertVisible: Vyberte úsek
- swipe:
    direction: RIGHT
- waitForAnimationToEnd
- swipe:
    direction: LEFT
- waitForAnimationToEnd
- assertVisible:
    id: userLocationButton
- tapOn:
    id: userLocationButton
- extendedWaitUntil:
    visible: Pokračovať
    timeout: 10000
- tapOn: Pokračovať
- runFlow:
    when:
      visible:
        id: addPhoto
    commands:
      - tapOn:
          id: addPhoto
# Will add zone photo
- tapOn:
    id: takePicture
- extendedWaitUntil:
    visible:
      id: confirmPicture
    timeout: 10000
- tapOn:
    id: confirmPicture
- tapOn: Evidenčné číslo vozidla
- inputText: SM01RK1
- tapOn: Ďalej
# Will consider resident as no violation
- assertVisible:
    id: NO_VIOLATION
- eraseText
- inputText: AAAAAAA
- tapOn: Ďalej
- assertNotVisible:
    id: NO_VIOLATION
- tapOn: Ďalej
- tapOn: Pokračovať
- runFlow:
    when:
      visible: Duplicita
    commands:
      - tapOn: Vytvoriť hlásenie
- assertVisible: Detail vozidla
- tapOn: Pokračovať
- repeat:
    times: 5
    commands:
      - extendedWaitUntil:
          visible:
            id: takePicture
            enabled: true
          timeout: 10000
      - tapOn:
          id: takePicture
# Will create offence
- tapOn:
    id: createOffence
- extendedWaitUntil:
    visible:
      id: newScan
    timeout: 10000
- tapOn:
    id: newScan
- tapOn: Evidenčné číslo vozidla
- inputText: AAAAAAA
- tapOn: Ďalej
# Will consider as duplicity
- assertVisible:
    id: PAAS_PARKING_VIOLATION_DUPLICITY
- tapOn: Ďalej
- tapOn: Pokračovať
# Will show duplicity modal
- assertVisible: Duplicita
